# LoveAgent

./: .env.example  .gitignore  README.md  demo.py  docker-compose.yml
backend/: pyproject.toml  test_hashing.py
backend/app/: config.py  database.py  init_app.py  main.py
backend/app/characters/: __init__.py  base.py  engine.py
backend/app/characters/templates/: female_healing.json  female_quiet.json  female_tsundere.json  male_funny.json  male_sunny.json  male_warm.json
backend/app/graph/: graph.py  nodes.py  state.py
backend/app/knowledge/: ingestion.py  retriever.py
backend/app/memory/: summarizer.py  vector_store.py
backend/app/middleware/: jwt.py
backend/app/models/: __init__.py
backend/app/relationship/: engine.py
backend/app/routes/: auth.py  characters.py  chat.py  knowledge.py  relationship.py
backend/app/services/: deepseek.py
frontend/: index.html  nginx.conf  package.json  vite.config.js
frontend/src/: App.vue
frontend/src/composables/: useWebSocket.js
frontend/src/router/: index.js
frontend/src/stores/: auth.js
frontend/src/utils/: axios.js
frontend/src/views/: CharacterSelect.vue  Chat.vue  Login.vue  Settings.vue
knowledge/character/female/: backstory.md  interests.md
knowledge/character/male/: backstory.md
knowledge/user/: about_me_example.txt
openspec/changes/ai-love-companion/: design.md  proposal.md  tasks.md
openspec/changes/debug-character-prompt-issue/: proposal.md  tasks.md
openspec/changes/enhanced-character-selection-and-proactive-chat/: design.md  proposal.md  tasks.md
(+35 files in other folders)
